partial_eq_dyn_derive/tests/ui/compile_errors/item-contains-non-partial-eq-element.rs
use partial_eq_dyn_derive::PartialEqDyn;

struct NoPartialEq;

#[derive(PartialEqDyn)]
struct Struct(i32, NoPartialEq);

fn main() {}
