partial_eq_dyn_derive/tests/ui/compile_errors/item-contains-non-partial-eq-element.stderr
error[E0369]: binary operation `==` cannot be applied to type `&NoPartialEq`
 --> tests/ui/compile_errors/item-contains-non-partial-eq-element.rs:5:10
  |
5 | #[derive(PartialEqDyn)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `PartialEqDyn` (in Nightly builds, run with -Z macro-backtrace for more info)
